Make the structure of the page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,48 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div id="container">
+        <div class="image-container">
+            <img src="Images/hot-air-balloons-1807521.jpg" alt="" class="background-image">
+            <div id="logo-section">
+                <div class="inner-logo-container">
+                    <img src="Images/odin-lined.png" alt="" class="logo">
+                    <h2 id>Sign-up Form</h2>
+                </div>
+            </div>
+        </div>
+
+        <div class="right-container">
+            <div class="upper-text">
+                <p>
+                    This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. <br>
+                    Sign up now to get started.<br>
+                    <br>
+                    <em>You know you want to.</em>
+                </p>
+            </div>
+            <div class="form-container">
+                <h2>Let's do this!</h2>
+                <form action="" method="get">
+                    <div class="row">
+                        <label for="first-name">First Name <input type="text" id="first-name" name="first-name"> </label>
+                        <label for="last-name">Last Name <input type="text" id="last-name" name="last-name"> </label>
+                    </div>
+                    <div class="row">
+                        <label for="Email">Email <input type="email" id="Email" name="Email"> </label>
+                        <label for="phone-number">Phone Number <input type="tel" id="phone-number" name="phone-number"> </label>
+                    </div>
+                    <div class="row">
+                        <label for="password">Password <input type="password" id="password" name="password"> </label>
+                        <label for="confirm-password">Confirm Password <input type="password" id="password" name="password"> </label>
+                    </div>
+                </form>
+            </div>
+            <div class="button-container">
+                <button type="submit">Create Account</button>
+                <h2>Already have an account? <a href>Log in</a> </h2>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
