--- a/index.html
+++ b/index.html
@@ -29,23 +29,23 @@
             </div>
             <div class="form-container">
                 <h2>Let's do this!</h2>
-                <form action="" method="get">
+                <form action="" method="post" id="form">
                     <div class="row">
-                        <label for="first-name">First Name <input type="text" id="first-name" name="first-name"> </label>
-                        <label for="last-name">Last Name <input type="text" id="last-name" name="last-name"> </label>
+                        <label for="first-name">First Name <input type="text" id="first-name" name="first-name" required> </label>
+                        <label for="last-name">Last Name <input type="text" id="last-name" name="last-name" required> </label>
                     </div>
                     <div class="row">
-                        <label for="Email">Email <input type="email" id="Email" name="Email"> </label>
-                        <label for="phone-number">Phone Number <input type="tel" id="phone-number" name="phone-number"> </label>
+                        <label for="Email">Email <input type="email" id="Email" name="Email" required> </label>
+                        <label for="phone-number">Phone Number <input type="tel" id="phone-number" name="phone-number" required> </label>
                     </div>
                     <div class="row">
-                        <label for="password">Password <input type="password" id="password" name="password"> </label>
-                        <label for="confirm-password">Confirm Password <input type="password" id="password" name="password"> </label>
+                        <label for="password">Password <input type="password" id="password" name="password" minlength="8" required> </label>
+                        <label for="confirm-password">Confirm Password <input type="password" id="password" name="password" minlength="8" required> </label>
                     </div>
                 </form>
             </div>
             <div class="button-container">
-                <button type="submit">Create Account</button>
+                <button type="submit" form="form">Create Account</button>
                 <h2>Already have an account? <a href>Log in</a> </h2>
             </div>
         </div>
